修改配置文件

--- a/distribution/conf/2m-noslave/broker-a.properties
+++ b/distribution/conf/2m-noslave/broker-a.properties
@@ -19,3 +19,18 @@ deleteWhen=04
 fileReservedTime=48
 brokerRole=ASYNC_MASTER
 flushDiskType=ASYNC_FLUSH
+namesrvAddr=localhost:9876
+autoCreateTopicEnable=true
+
+#存储路径
+storePathRootDir=E:\\data\\rocketMQ\\store
+#commitLog 存储路径
+storePathCommitLog=E:\\data\\rocketMQ\\store\\commitlog
+#消费队列存储路径存储路径
+storePathConsumeQueue=E:\\data\\rocketMQ\\store\consumequeue
+#消息索引存储路径
+storePathIndex=E:\\data\\rocketMQ\\store\\index
+#checkpoint 文件存储路径
+storeCheckpoint=E:\\data\\rocketMQ\\store\\checkpoint
+#abort 文件存储路径
+abortFile=E:\\data\\rocketMQ\\store\\abort
